deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gophprofile-api
  namespace: gophprofile
  labels:
    app.kubernetes.io/name: gophprofile
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: gophprofile
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
